[package]
authors = ['J2ghz <j2.00ghz@gmail.com>']
categories = ['command-line-utilities']
description = 'Generates images from rtl_power csv files'
edition = '2018'
exclude = ['samples/*']
keywords = [
  'sdr',
  'rtl-sdr',
  'rtl_power',
]
license = 'AGPL-3.0-or-later'
name = 'sdr-heatmap'
readme = 'README.md'
repository = 'https://github.com/j2ghz/sdr-heatmap/'
version = '0.1.5'

[[bench]]
harness = false
name = 'bench'

[dev-dependencies]
criterion = '0.3'
proptest = "0.10"
test-generator = "0.3"

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
clap = '2.33.3'
csv = '1.1.3'
flate2 = '1.0.18'
image = '0.23.10'
itertools = "0.9"
log = '0.4.11'
rayon = '1.4.1'
stderrlog = '0.5.0'
structopt = "0.3"
walkdir = '2'
webp = "0.1.0"
