[package]
authors = ['J2ghz <j2.00ghz@gmail.com>']
categories = ['command-line-utilities']
description = 'Generates images from rtl_power csv files'
edition = '2021'
exclude = ['samples/*']
keywords = [
  'sdr',
  'rtl-sdr',
  'rtl_power',
]
license = 'AGPL-3.0-or-later'
name = 'sdr-heatmap'
readme = 'README.md'
repository = 'https://github.com/j2ghz/sdr-heatmap/'
version = '0.1.5'

[profile.release]
codegen-units = 1
lto = "fat"

[[bench]]
harness = false
name = 'bench'

[dev-dependencies]
criterion = '0.3'
proptest = "1.0"
test-generator = "0.3"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
clap = '2.33'
csv = '1.1'
flate2 = '1.0'
image = '0.23'
itertools = "0.10"
log = '0.4'
rayon = '1.5'
stderrlog = '0.5'
structopt = "0.3"
walkdir = '2.3'
webp = "0.2"
